# lightagents

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  readthedocs.yaml
.github/workflows/: bandit.yml
app/: config.py  logger_config.py  test.py  tool_registry.py
app/ai_agents/: claude_agent.py  gcp_claude.py
app/schemas/: __init__.py  messages_schemas.py  model_config.py  thread_agent_schema.py  thread_schema.py  tool_schema.py
app/serializers/messages/: claude_messages_serializers.py
app/serializers/tools/: __init__.py  base_serializers.py  claude_tools_serializer.py
app/utils/: serializers.py
docs/api/: logger_config.md  tool_registry.md
docs/api/ai_agents/: claude_agent.md  openai_agent.md
docs/api/core/: logger_config.md  tool_registry.md
docs/api/exceptions/: messages_exceptions.md  thread_agent_exceptions.md
docs/api/schemas/: messages_schemas.md  model_config.md  thread_agent_schema.md  thread_schema.md  tool_schema.md
docs/api/serializers/messages/: claude_messages_serializers.md  openai_messages_serializer.md
docs/api/serializers/tools/: base_serializers.md  claude_tools_serializer.md
docs/api/utils/: serializers.md
examples/: claude_example.py  openai_agent_example.py
light_agents/: config.py  example.py  logger_config.py
light_agents/ai_agents/: __init__.py  claude_agent.py  openai_agent.py
light_agents/core/: tool_registry.py
light_agents/exceptions/: messages_exceptions.py  thread_agent_exceptions.py
light_agents/schemas/: __init__.py  messages_schemas.py  model_config.py  thread_agent_schema.py  thread_schema.py  tool_schema.py
light_agents/serializers/messages/: claude_messages_serializers.py  openai_messages_serializer.py
light_agents/serializers/tools/: __init__.py  claude_tools_serializer.py  openai_tools_serializer.py
light_agents/utils/: serializers.py
scripts/: gen_docs.py
src/: config.py  example.py  test.py  test_mock.py  tool_registry.py
src/ai_agents/: claude_agent.py
src/schemas/: __init__.py  messages_schemas.py  thread_agent_schema.py  thread_schema.py
src/serializers/messages/: claude_messages_serializers.py
src/serializers/tools/: __init__.py  base_serializers.py  claude_tools_serializer.py
src/utils/: serializers.py
