[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ligth-agents"
version = "0.0.1"
description = "Ligthweight library for inserting LLM agents in conversations"
requires-python = ">=3.11"
authors = [{name = "Thiago Amorim", email = "thiago.wander22@gmail.com"}]

dependencies = [
    "anthropic-0.36.0",
    "pydantic-settings>=2.4.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest>=6.0",
    "black>=22.0",
    "flower>=2.0.1"
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "D"]
ignore = ["D100", "D104", "W293"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
strict = true
allow_redefinition = false