[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "light-agents"
version = "0.1.0"
description = "Ligthweight library for inserting LLM agents in conversations"
authors = ["Thiago Amorim <thiago.wander22@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.36.0"
pydantic-settings = "^2.4.0"
pydantic = "^2.0.0"
boto3 = "^1.28.59"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.0"
mypy = "^1.13.0"
pytest-cov = "^5.0.0"
taskipy = "^1.14.0"



[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.42"
mkdocstrings = "^0.26.2"
mkdocstrings-python = "^1.12.2"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "D"]
ignore = ["D100", "D104", "W293"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
strict = true
allow_redefinition = false