[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "light-agents"
version = "0.0.1"
description = "Ligthweight library for inserting LLM agents in conversations"
authors = ["Thiago Amorim <thiago.wander22@gmail.com>"]
readme = "README.md"
license="MIT"
packages = [{ include = "light_agents"}]
classifiers = [
 "Development Status :: 4 - Beta",
 "License :: OSI Approved :: MIT License"
]

[tool.poetry.urls]
documentation = "https://lightagents.readthedocs.io/en/latest/"
bug_tracker = "https://github.com/thiago186/lightagents/issues"


[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.36.0"
pydantic-settings = "^2.4.0"
pydantic = "^2.0.0"
boto3 = "^1.28.59"
termcolor = "^2.5.0"
google = "^3.0.0"
google-auth = "^2.35.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
openai = "^1.52.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.0"
mypy = "^1.13.0"
pytest-cov = "^5.0.0"
taskipy = "^1.14.0"
bandit = "^1.7.10"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.42"
mkdocstrings = "^0.26.2"
mkdocstrings-python = "^1.12.2"
mkdocs = "^1.6.1"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D100", "D104", "W293", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
strict = true
allow_redefinition = false

[tool.pytest.ini_options]
pythonpath="."
addopts="--doctest-modules"

[tool.taskipy.tasks]
lint = "bandit -r ./light_agents && ruff check ./light_agents && ruff check --select I --fix ./light_agents && mypy ./light_agents"
pre_docs = "python scripts/gen_docs.py"
docs = "mkdocs serve --dev-addr=localhost:8001"
pre_test = "task lint"
test = "pytest -s -x --cov=light_agents -vv"
post_test = "coverage html"